--- a/my-website/package.json
+++ b/my-website/package.json
@@ -16,8 +16,12 @@
   "dependencies": {
     "@docusaurus/core": "3.7.0",
     "@docusaurus/preset-classic": "3.7.0",
+    "@firebasegen/default-connector": "file:dataconnect-generated/js/default-connector",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.0.0",
+    "dotenv": "^16.5.0",
+    "firebase": "^11.7.1",
+    "mobx-state-tree": "^7.0.2",
     "prism-react-renderer": "^2.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -25,7 +29,8 @@
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.7.0",
-    "@docusaurus/types": "3.7.0"
+    "@docusaurus/types": "3.7.0",
+    "webpack": "^5.99.8"
   },
   "browserslist": {
     "production": [
